src/test/deca/context/valid/sans_objet/init_cont_val_02.deca
// Description:
//    Initialisation et typage
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

{
   float a = 3;
}
