src/test/deca/context/invalid/sans_objet/missing_type_declaration.deca
// Description:
//     Initialisation sans declaration de variable;
//
// Resultats:
//    Ligne 11: Missing type declaration
//
// Historique:
//    cree le 01/01/2023

{
   x = 21;
}
